Fixed styling issues on Firefox

--- a/public/reset.css
+++ b/public/reset.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 html,
 body,
 p,
@@ -28,6 +26,10 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
+}
+
+p {
+  -webkit-box-orient: vertical;
 }
 
 h1,
