--- a/src/components/memo/MemoBodyText.scss
+++ b/src/components/memo/MemoBodyText.scss
@@ -3,7 +3,7 @@
 
 .memo-body-text {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   text-align: center;
   @include clamp-paragraph($memo-body-max-lines, $memo-tile-background-color)
 }
