--- a/src/style/themes/light/_theme-memo-tile.scss
+++ b/src/style/themes/light/_theme-memo-tile.scss
@@ -29,3 +29,7 @@ $memo-body-max-lines: 6 !default;
 // Forms
 $memo-input-color: $gray-dark !default;
 $memo-input-hover-color: $gray-light !default;
+
+// Memos sort options
+$memos-sort-options-background: $red-light !default;
+$memos-sort-options-color: $white !default;
